Quick fix for menu column width on mobile.

--- a/css/hctpl.css
+++ b/css/hctpl.css
@@ -279,8 +279,8 @@ footer nav {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   #menu-main h3, footer nav h3 {
